--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@ffmpeg/ffmpeg": "^0.12.6",
     "@ffmpeg/util": "^0.12.1",
     "@picocss/pico": "^2.0.6",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.6",
     "next": "14.2.7",
     "react": "^18",
