--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.6",
+    "ethers": "^6.13.4",
     "lodash": "^4.17.21",
     "next": "14.2.7",
     "react": "^18",
