--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.12.6",
     "@ffmpeg/util": "^0.12.1",
+    "@maticnetwork/maticjs": "^3.9.2",
+    "@maticnetwork/maticjs-ethers": "^1.1.0",
     "@picocss/pico": "^2.0.6",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
