--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.21",
     "next": "14.2.7",
     "node-fetch": "^3.3.2",
+    "phaser": "^3.90.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0"
