--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@maticnetwork/maticjs": "^3.9.2",
     "@maticnetwork/maticjs-ethers": "^1.1.0",
     "@picocss/pico": "^2.0.6",
+    "@types/canvas-confetti": "^1.9.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.6",
+    "canvas-confetti": "^1.9.3",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.4",
     "lodash": "^4.17.21",
