--- a/package.json
+++ b/package.json
@@ -17,20 +17,27 @@
     "@maticnetwork/maticjs": "^3.9.2",
     "@maticnetwork/maticjs-ethers": "^1.1.0",
     "@picocss/pico": "^2.0.6",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-slot": "^1.2.3",
     "@types/canvas-confetti": "^1.9.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.6",
     "canvas-confetti": "^1.9.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.4",
     "lodash": "^4.17.21",
-    "next": "14.2.7",
+    "lucide-react": "^0.515.0",
+    "next": "^15.3.3",
     "node-fetch": "^3.3.2",
     "phaser": "^3.90.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@ffmpeg/types": "^0.12.2",
