--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "@maticnetwork/maticjs-ethers": "^1.1.0",
     "@picocss/pico": "^2.0.6",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "@types/canvas-confetti": "^1.9.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
