--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "embla-carousel-react": "^8.6.0",
     "ethers": "^6.13.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.515.0",
