--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cacheMetadata": "tsx scripts/cacheMetadata.ts"
   },
   "dependencies": {
+    "@dynamic-labs/ethereum": "^4.20.7",
+    "@dynamic-labs/sdk-react-core": "^4.20.7",
     "@farcaster/frame-sdk": "^0.0.64",
     "@ffmpeg/ffmpeg": "^0.12.6",
     "@ffmpeg/util": "^0.12.1",
@@ -44,7 +46,8 @@
     "react-dom": "^18",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.31.3"
   },
   "devDependencies": {
     "@ffmpeg/types": "^0.12.2",
